assets/styles/index.scss
---
# Front-matter to make Jekyll process this file (render to CSS).
---



// Functions.
@use "utilities" as *;

// Basic reset, typography, links.
@use 'reset';
@use 'fonts';
@use 'typography';
@use 'links';



:root {
	@extend %font--calibre--regular;

	--logo--scale: 0.618; // Golden.

	--typography--leading:          1.2;
	--typography--leading--tagline: 1;

	--typography--size:          2rem;
	--typography--size--logo:    calc(var(--typography--size) * 4);
	--typography--size--tagline: calc(var(--typography--size) * 4 / 3);
	--typography--size--intro:   calc(var(--typography--size) * 2);

	--margin:           calc(var(--typography--size) * 1.2);
	--margin--vertical: var(--margin);

	--pagination--size:         calc(var(--typography--size--logo) * 0.125); // Size of the period in the logo.
	--pagination--size--scaled: calc(var(--pagination--size) * var(--logo--scale));
	--pagination--gutter:       calc(var(--pagination--size--scaled) + var(--margin));

	--stroke--width: calc(var(--typography--size--tagline) * 0.0666);

	--page--width: 100vw;

	--page--inset--right: 0.6rem; // Optical inset.

	--column--ratio:             0.382fr 0.618fr; // Golden.
	--column--ratio--pagination: 1fr var(--pagination--size--scaled);

	--color--art:     hsl(360, 55%, 48%);
	--color--media:   hsl(42,  88%, 48%);
	--color--science: hsl(212, 75%, 40%);

	--color--transition: 400ms;

	--color--transition--curve:        cubic-bezier(0.37, 0, 0.63, 1);
	--color--transition--curve--tight: cubic-bezier(0.83, 0, 0.17, 1); // Steeper to minimize the “gray flash” on text.

	--color--link:          hsl(0, 0%, 0%, 3.333%);
	--color--link--reverse: hsl(0, 0%, 100%, 6.666%);

	--link--enlargement:    0.4rem;
	--link--highlight:      var(--color--link--reverse);
	--link--outline:        0.2rem;

	scroll-behavior: smooth;

	@include breakpoint(320) { --typography--size: calc((20/375) * 100vw); } // Scale it all down from 20 @ 375.

	@include landscape {
		--logo--scale: 0.75;

		--typography--size--logo: calc(var(--typography--size) * 3.5);

		--column--ratio--pagination: calc((100% - var(--margin)) * 0.382) var(--pagination--size--scaled); // Match parent on left.
	}

	@include breakpoint(768) {
		--logo--scale: 0.618; // Back to Golden.

		--typography--size:          clamp(2.4rem, (24/1440) * 100vw, 2.8rem);
		--typography--size--logo:    calc(var(--typography--size) * 4.5);
		--typography--size--tagline: calc(var(--typography--size) * 1.5);

		--margin: calc(var(--typography--size) * 2);

		--page--inset--right: 0.8rem;

		--link--enlargement: 0.8rem;
	}

	@include breakpoint(980) { --typography--size--logo: calc(var(--typography--size) * 5.5) }

	@include breakpoint(1640) { --page--width: 164rem; } // Cap width around a 16-inch MacBook Pro.

	@include breakpoint(1772) { // Width cap, plus (now larger) margins.
		@include tall {
			--typography--size--logo: calc(var(--typography--size) * 6.5);

			--margin--vertical: calc(var(--margin) * 2);

			--page--inset--right: 0rem;
		}
	}

	@include browser-specific(safari--mobile) {
		--color--link:          hsl(0, 0%, 0%, 10%);
		--color--link--reverse: hsl(0, 0%, 100%, 20%);
	}



	// From Viewporter JS.
	&.clockwise,
	&.counter-clockwise { --iphone--notch: 1.3rem; } // On my 13 mini, at least.

	&.clockwise {
		--page--inset--left:  0.4rem; // Optical shift.
		--page--inset--right: calc(env(safe-area-inset-right) - var(--iphone--notch) + 0.4rem);
	}

	&.counter-clockwise {
		--page--inset--left:  calc(env(safe-area-inset-left) - var(--iphone--notch));
		--page--inset--right: 0.6rem; // Optical room for scroll indicator.
	}



	// Loading JS.
	&.loading {
		scroll-behavior: auto;
	}
}



body {
	// iPhone rotation and width caps.
	margin-left:   auto;
	margin-right:  auto;
	padding-left:  var(--page--inset--left, 0rem);
	padding-right: var(--page--inset--right, 0rem);
	width:         var(--page--width);



	// Main layout.
	@import 'spacing';
	@import 'color';

	> main,
	> footer {
		display: grid;

		@include landscape {
			column-gap:            var(--margin);
			grid-template-columns: var(--column--ratio);
			padding-left:          var(--margin);
			padding-right:         var(--margin);
		}

		> section {
			padding-left:  var(--margin);
			padding-right: var(--margin);

			@include landscape {
				grid-column:   2; // After the sticky span.
				margin-right:  var(--pagination--gutter); // Room for the dots.
				padding-left:  initial; // Grid gaps take over.
				padding-right: initial;
				z-index:       1; // In front of header.
			}
		}
	}

	// Their sticky headers, in common.
	> main > header,
	> footer > aside {
		align-content:         space-between;
		column-gap:            var(--margin);
		display:               grid;
		grid-row:              1; // Force overlap for about/footer.
		grid-auto-rows:        min-content;
		grid-template-columns: var(--column--ratio--pagination);
		justify-content:       space-between;
		padding-bottom:        var(--margin--vertical);
		padding-left:          var(--margin);
		padding-right:         var(--margin);
		position:              sticky;

		@include landscape {
			grid-column:   1 / span 2; // Across the content.
			padding-left:  initial; // Grid gaps take over.
			padding-right: initial;
		}
	}



	// The “Art, Science, Media” header and nouns area.
	> main {
		position: sticky;
		top:      calc(-1 * var(--main--height) + var(--tagline--height) + var(--margin--vertical) * 2 - 0.1rem); // Hide overshoots.

		@import 'header';
		@import 'intro';
	}

	// The “About” section, below.
	> footer {
		min-height: calc(100vh - var(--tagline--height) - var(--margin--vertical) * 2);

		@import 'aside';
		@import 'about';
	}



	// The jump icons/buttons.
	nav {
		align-items:     end;
		display:         flex;
		justify-content: center;
		grid-area:       button;

		> a {
			@extend %link--element;

			position: absolute;

			> svg {
				height:    calc(var(--typography--size--tagline) * 1.333);
				transform: translate(var(--icon--shift--x, 0rem), var(--icon--shift--y, 0rem)) rotate(var(--icon--rotation, 0deg));
				width:     calc(var(--typography--size--tagline) * 1.333);

				--icon--shift--x: 0.05em;
				--icon--shift--y: 0.0333em;

				@include retina {
					--icon--shift--x: 0.025em;
					--icon--shift--y: 0em;
				}

				@include retina(3) {
					--icon--shift--x: 0.0166em;
				}
			}

			&[href="#intro"] {
				> svg {
					--icon--rotation: 90deg;
				}
			}

			&[href="#top"] {
				> svg {
					--icon--rotation: -90deg;
				}
			}
		}
	}
}

